--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,22 @@
-[Content of docker-compose.yaml as created before]
+version: '3.8'
+
+services:
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
